tests/jtrrouter/errors/no_input/errors.jtrrouter
Error: No route input specified or all routes were invalid.
Quitting (on error).
